[package]
name = "rustdoc"
version = "0.1.0"
authors = ["steveklabnik <steve@steveklabnik.com>"]
license = "MIT/Apache-2.0"

[[bin]]
name = "rustdoc"
doc = false

[lib]
# see https://github.com/steveklabnik/rustdoc/issues/22
doctest = false

[dependencies]
clap = "2.24.2"
error-chain = "0.11"
indicatif = "0.6.0"
open = "1.2.0"
rayon = "0.8.2"
rls-analysis = "0.6.7"
serde = "1.0.11"
serde_derive = "1.0.11"
serde_json = "1.0.2"

[build-dependencies]
error-chain = "0.11"
quote = "0.3"
syn = "0.11"
glob = "0.2.11"

[dev-dependencies]
error-chain = "0.11"
jsonapi = "0.5.2"
lazy_static = "0.2"
regex = "0.2"
serde_json = "1.0.2"
shlex = "0.1"
tempdir = "0.3"
