[package]
name = "rustdoc"
version = "0.1.0"
authors = ["steveklabnik <steve@steveklabnik.com>"]
license = "MIT/Apache-2.0"

[[bin]]
name = "rustdoc"
doc = false

[lib]
# see https://github.com/steveklabnik/rustdoc/issues/22
doctest = false

[dependencies]
clap = "2.24.2"
env_logger = "0.4"
indicatif = "0.6.0"
indoc = "0.2"
failure = "0.1"
lazy_static = "0.2"
log = "0.3"
open = "1.2.0"
pulldown-cmark = { version = "0.1", default-features = false }
quote = "0.3"
rls-analysis = "0.8"
rls-data = { version = "0.13", features = ["serialize-serde"] }
serde = "1.0.11"
serde_derive = "1.0.11"
serde_json = "1.0.2"
syn = { version = "0.11", features = ["full"] }
tempdir = "0.3"

[build-dependencies]
quote = "0.3"

[dev-dependencies]
failure = "0.1"
indoc = "0.2"
itertools = "0.6"
jmespath = "0.2"
jsonapi = "0.5.2"
lazy_static = "0.2"
rand = "0.3"
regex = "0.2"
serde_json = "1.0.2"
shlex = "0.1"

[workspace]
members = ["rustdoc-ember"]
exclude = ["example"]
